# image-archiver

./: Cargo.toml  README.md  plan.md
src/: args.rs  failed.rs  filename.rs  lib.rs  main.rs  metadata.rs  processor.rs
