[package]
name = "collect_media"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
walkdir = "2.5"
exiftool = "0.3"
anyhow = "1.0"
thiserror = "1.0"
crossbeam-channel = "0.5"
num_cpus = "1.16"
